@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2023-09-22T16:11:25Z",
+  "timestamp" : "2023-09-23T00:39:33Z",
   "count_outdated" : 998,
   "uniques_outdated" : 631,
-  "count" : 1018,
+  "count" : 1019,
   "uniques" : 646,
   "clones" : [
     {
       "timestamp": "2023-09-09T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 2, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count": 1,
+      "count_minmax": [ 1, 3 ],
+      "count_decinc": [ 2, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2023-09-11T00:00:00Z",
@@ -88,9 +88,9 @@
     },
     {
       "timestamp": "2023-09-22T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
