@@ -1,11 +1,11 @@
 {
-  "count": 20,
+  "count": 19,
   "uniques": 3,
   "clones": [
     {
       "timestamp": "2023-09-09T00:00:00Z",
-      "count": 3,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2023-09-11T00:00:00Z",
@@ -49,7 +49,7 @@
     },
     {
       "timestamp": "2023-09-22T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
